fix: Point beta.conf to .rocks

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -8,7 +8,7 @@ perl_set $forum_proxy_address 'sub { return $ENV{"FORUM_PROXY_ADDRESS"}; }';
 
 server {
   listen 80;
-  server_name beta.freecodecamp.org;
+  server_name www.freecodecamp.rocks;
 
 
   #include snippets/ssl.conf;
@@ -29,7 +29,7 @@ server {
   }
 
   location /news-staging {
-    return 301 https://www.freecodecamp.org/news;
+    return 301 https://www.freecodecamp.rocks/news;
   }
 
   location /forum {
