feat: Prep for letsEncrypt

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -7,11 +7,10 @@
 perl_set $forum_proxy_address 'sub { return $ENV{"FORUM_PROXY_ADDRESS"}; }';
 
 server {
-  listen 80;
+  listen 443 ssl;
   server_name www.freecodecamp.rocks;
 
-
-  #include snippets/ssl.conf;
+  include snippets/ssl.conf;
 
   location / {
     proxy_pass http://freecodecamp:3000;
@@ -22,10 +21,10 @@ server {
 
 #  Use the below to take down news
 #  Comment out all the proxy stuff below in this location block also
-#    alias /var/www/news-maintenance-page/;
+   alias /var/www/news-maintenance-page/;
 
-    proxy_pass http://10.0.0.4:32323;
-    include snippets/proxy-params.nginx;
+#    proxy_pass http://10.0.0.4:32323;
+#   include snippets/proxy-params.nginx;
   }
 
   location /news-staging {
@@ -36,10 +35,20 @@ server {
 
 #  Use the below to take down the forum
 #  Comment out all the proxy stuff below in this location block also
-#    alias /var/www/forum-maintenance-page/;
+   alias /var/www/forum-maintenance-page/;
 
-    proxy_pass ${forum_proxy_address};
-    include snippets/proxy-params.nginx;
+#   proxy_pass ${forum_proxy_address};
+#    include snippets/proxy-params.nginx;
   }
 
+}
+
+
+## http -> https redirect
+
+server {
+  listen 80;
+  server_name freecodecamp.rocks www.freecodecamp.rocks;
+
+  return 301 https://www.freecodecamp.rocks$request_uri;
 }
