--- a/nginx/snippets/ssl.conf
+++ b/nginx/snippets/ssl.conf
@@ -1,2 +1,2 @@
-ssl_certificate /etc/ssl/snakeoil.crt;
-ssl_certificate_key /etc/ssl/snakeoil.key;
+ssl_certificate /etc/ssl/live/www.freecodecamp.rocks/fullchain.pem;
+ssl_certificate_key /etc/ssl/live/www.freecodecamp.rocks/privkey.pem;
