--- a/Dockerfile.freecodecamp
+++ b/Dockerfile.freecodecamp
@@ -18,4 +18,4 @@ RUN npm run build
 
 EXPOSE 3000
 
-CMD [ "node", "pm2Start.js" ]
+CMD [ "pm2", "start server/production-start.js", "-i 4", "--no-deamon", "--max-memory-restart 600M", "-n docker-nyc-www" ]
