fix: nginx config

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -13,7 +13,7 @@ server {
   include snippets/ssl.conf;
 
   location / {
-    proxy_pass http://freecodecamp:3000;
+    proxy_pass http://localhost:3000;
     include snippets/proxy-params.nginx;
   }
 
