feat: proxy pass to the forum

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -35,10 +35,10 @@ server {
 
 #  Use the below to take down the forum
 #  Comment out all the proxy stuff below in this location block also
-   alias /var/www/forum-maintenance-page/;
+    # alias /var/www/forum-maintenance-page/;
 
-#   proxy_pass ${forum_proxy_address};
-#    include snippets/proxy-params.nginx;
+    proxy_pass ${forum_proxy_address};
+    include snippets/proxy-params.nginx;
   }
 
 }
