--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,6 @@
 user  nginx;
 worker_processes auto;
+load_module modules/ngx_http_perl_module.so;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
