fix: Proxy news vm

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -13,7 +13,7 @@ server {
   include snippets/ssl.conf;
 
   location / {
-    proxy_pass http://freecodecamp:3000;
+    proxy_pass http://localhost:3000;
     include snippets/proxy-params.nginx;
   }
 
@@ -21,10 +21,10 @@ server {
 
 #  Use the below to take down news
 #  Comment out all the proxy stuff below in this location block also
-   alias /var/www/news-maintenance-page/;
+#   alias /var/www/news-maintenance-page/;
 
-#    proxy_pass http://10.0.0.4:32323;
-#   include snippets/proxy-params.nginx;
+   proxy_pass http://10.0.1.5:32323;
+   include snippets/proxy-params.nginx;
   }
 
   location /news-staging {
