--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ jobs:
       - docker build -t freecodecamp-api  -f Dockerfile.freecodecamp .
       - docker images
       - docker tag freecodecamp-api freecodecamp/freecodecamp-api
-      - docker push $DOCKER_USERNAME/freecodecamp-api
+      - docker push freecodecamp/freecodecamp-api
     - stage: build proxy docker image
       script:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t freecodecamp-proxy  -f Dockerfile.proxy .
       - docker images
       - docker tag freecodecamp-proxy freecodecamp/freecodecamp-proxy
-      - docker push $DOCKER_USERNAME/freecodecamp-proxy
+      - docker push freecodecamp/freecodecamp-proxy
