feat(travis): Only push on master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,29 @@ dist: xenial
 
 jobs:
   include:
-    - stage: build api docker image
+    - stage: build proxy
+      if: branch != master
       script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t freecodecamp-api  -f Dockerfile.freecodecamp .
-      - docker images
-      - docker tag freecodecamp-api freecodecamp/freecodecamp-api
-      - docker push freecodecamp/freecodecamp-api
-    - stage: build proxy docker image
+        - docker build -t freecodecamp-proxy  -f Dockerfile.proxy .
+    - stage: build api
+      if: branch != master
       script:
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - docker build -t freecodecamp-proxy  -f Dockerfile.proxy .
-      - docker images
-      - docker tag freecodecamp-proxy freecodecamp/freecodecamp-proxy
-      - docker push freecodecamp/freecodecamp-proxy
+        - docker build -t freecodecamp-api  -f Dockerfile.freecodecamp .
+
+
+    - stage: build=>deploy proxy
+      if: branch = master
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t freecodecamp-proxy  -f Dockerfile.proxy .
+        - docker images
+        - docker tag freecodecamp-proxy freecodecamp/freecodecamp-proxy
+        - docker push freecodecamp/freecodecamp-proxy
+    - stage: build=>deploy api
+      if: branch = master
+      script:
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker build -t freecodecamp-api  -f Dockerfile.freecodecamp .
+        - docker images
+        - docker tag freecodecamp-api freecodecamp/freecodecamp-api
+        - docker push freecodecamp/freecodecamp-api
