fix: manage separate domain ssl certs

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -10,7 +10,7 @@ server {
   listen 443 ssl;
   server_name www.freecodecamp.rocks;
 
-  include snippets/ssl.conf;
+  include snippets/ssl-rocks.conf;
 
   location / {
     proxy_pass http://localhost:3000;
