fix: Bring other configs up-to-date

--- a/nginx/sites-enabled/blog.conf
+++ b/nginx/sites-enabled/blog.conf
@@ -9,7 +9,7 @@ server {
   server_name blog.freecodecamp.org;
 
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
 
   return 302 $new_blog;
 }
