--- a/nginx/sites-enabled/medium-com.conf
+++ b/nginx/sites-enabled/medium-com.conf
@@ -3,7 +3,7 @@ server {
   listen 443 ssl;
   server_name medium.freecodecamp.com;
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
 
   return 301 https://medium.freecodecamp.org$request_uri;
 }
