--- a/nginx/sites-enabled/news.conf
+++ b/nginx/sites-enabled/news.conf
@@ -7,5 +7,7 @@ server {
   listen 443 ssl;
   server_name news.freecodecamp.org;
 
+  include snippets/ssl-org.conf;
+
   return 301 https://www.freecodecamp.org/news;
 }
