--- a/nginx/sites-enabled/opensourceforgood.conf
+++ b/nginx/sites-enabled/opensourceforgood.conf
@@ -8,7 +8,7 @@ server {
   server_name www.opensourceforgood.org;
 
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
 
   location / {
     proxy_pass https://freecodecamp.github.io/open-source-for-good-directory$request_uri;
@@ -37,7 +37,7 @@ server {
   server_name opensourceforgood.org;
 
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
 
   return 302 $scheme://www.opensourceforgood.org$request_uri;
 }
