--- a/nginx/sites-enabled/production-forum.conf
+++ b/nginx/sites-enabled/production-forum.conf
@@ -7,7 +7,7 @@ server {
   listen 443 ssl;
   server_name forum.freecodecamp.org;
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
   include snippets/netlify-redirects.nginx;
 
   return 301 https://www.freecodecamp.org/forum$request_uri;
