--- a/nginx/sites-enabled/production-org.conf
+++ b/nginx/sites-enabled/production-org.conf
@@ -2,15 +2,17 @@
 # production-proxy
 ###
 
+perl_set $forum_proxy_address 'sub { return $ENV{"FORUM_PROXY_ADDRESS"}; }';
+
 server {
   listen 443;
   server_name freecodecamp.org www.freecodecamp.org;
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
   include snippets/netlify-redirects.nginx;
 
   location / {
-    proxy_pass http://freecodecamp:3000;
+    proxy_pass http://localhost:3000;
     include snippets/proxy-params.nginx;
   }
 
@@ -32,15 +34,15 @@ server {
 
 #  Use the below to take down the forum
 #  Comment out all the proxy stuff below in this location block also
-   alias /var/www/forum-maintenance-page/;
+#   alias /var/www/forum-maintenance-page/;
 
-    # proxy_pass ############;
-    # proxy_redirect off;
-    # proxy_buffering off;
-    # proxy_set_header Host $http_host;
-    # proxy_set_header X-Forwarded-Host $http_host;
-    # proxy_set_header X-Real-IP $remote_addr;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass ${forum_proxy_address};
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
 }
@@ -59,7 +61,7 @@ server {
   server_name freecodecamp.org;
 
 
-  include snippets/ssl.conf;
+  include snippets/ssl-org.conf;
 
   return 301 https://www.freecodecamp.org$request_uri;
 }
