fix: Get client ip from cloudflare

--- a/nginx/sites-enabled/beta.conf
+++ b/nginx/sites-enabled/beta.conf
@@ -11,6 +11,7 @@ server {
   server_name www.freecodecamp.rocks;
 
   include snippets/ssl-rocks.conf;
+  include snippets/cloudflare.nginx;
 
   location / {
     proxy_pass http://localhost:3000;
