--- a/nginx/sites-enabled/production-org.conf
+++ b/nginx/sites-enabled/production-org.conf
@@ -10,6 +10,7 @@ server {
 
   include snippets/ssl-org.conf;
   include snippets/netlify-redirects.nginx;
+  include snippets/cloudflare.nginx;
 
   location / {
     proxy_pass http://localhost:3000;
