fix: Update .rocks nginx config

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -8,7 +8,7 @@ perl_set $forum_proxy_address 'sub { return $ENV{"FORUM_PROXY_ADDRESS"}; }';
 
 server {
   listen 443 ssl;
-  server_name www.freecodecamp.rocks;
+  server_name api.freecodecamp.rocks;
 
   include snippets/ssl-rocks.conf;
   include snippets/cloudflare.nginx;
@@ -29,7 +29,7 @@ server {
   }
 
   location /news-staging {
-    return 301 https://www.freecodecamp.rocks/news;
+    return 301 https://api.freecodecamp.rocks/news;
   }
 
   location /forum {
@@ -49,7 +49,7 @@ server {
 
 server {
   listen 80;
-  server_name freecodecamp.rocks www.freecodecamp.rocks;
+  server_name freecodecamp.rocks api.freecodecamp.rocks;
 
-  return 301 https://www.freecodecamp.rocks$request_uri;
+  return 301 https://api.freecodecamp.rocks$request_uri;
 }
