--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -6,5 +6,7 @@ EXPOSE 443
 ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
 ADD ./nginx/snippets /etc/nginx/snippets
 ADD ./nginx/sites-enabled /etc/nginx/sites-enabled
+ADD ./www /var/www
+
 
 RUN rm /etc/nginx/conf.d/default.conf
