fix: rocks.conf syntax

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -28,7 +28,7 @@ server {
 
   server_name api.freecodecamp.rocks;
 
-  return 301 https://api.freecodecamp.rocks
+  return 301 https://api.freecodecamp.rocks;
 }
 
 server {
