fix: Use pipeline to build, only copy what is needed

--- a/Dockerfile.freecodecamp
+++ b/Dockerfile.freecodecamp
@@ -3,38 +3,22 @@ FROM node:10
 RUN apt-get update
 RUN apt-get install nano
 
-# pm2 needs to install with a root user
 RUN npm i -g pm2
 
-RUN mkdir -p /home/node/app
-
-WORKDIR /home/node/app/
-
-COPY ./freecodecamp/ ./
-
-# lerna bootstrap fails if the files do not belong to the current user
-# lerna bootstrap fails when run as root
-RUN chown -R node:node /home/node/app
-
-USER node
-
-RUN npm install
-
-RUN node tools/scripts/ensure-path-migration-map
-
-WORKDIR /home/node/app/api-server
-
-RUN npm run build
+WORKDIR /app
 
 EXPOSE 3000
 
+RUN mkdir ./node_modules
+RUN mkdir -p ./api-server/node_modules
+
+COPY ./freecodecamp/node_modules ./node_modules/
+COPY ./freecodecamp/api-server/node_modules ./api-server/node_modules/
+COPY ./freecodecamp/config ./config/
+COPY ./freecodecamp/api-server ./api-server/
+
+WORKDIR /app/api-server
+
 COPY ./pm2.json .
-
-# Remove files not required for the API server
-WORKDIR /home/node/app
-
-RUN rm -rf client curriculum docs guide mock-guide tools
-
-WORKDIR /home/node/app/api-server
 
 CMD [ "pm2", "start", "pm2.json", "--no-daemon" ]
