--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ jobs:
         - node tools/scripts/ensure-path-migration-map.js
         - cd api-server
         - npm run build
+        - cd $TRAVIS_BUILD_DIR
         - docker build -t freecodecamp-api  -f Dockerfile.freecodecamp .
