fix: Serve 404 from nginx

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -42,12 +42,7 @@ server {
   root /var/www/app;
 
   location / {
-    try_files $uri $uri/ @node;
-  }
-
-  location @node {
-    proxy_pass http://loopback;
-    include snippets/proxy-params.nginx;
+    try_files $uri $uri/ $uri.html =404;
   }
 
   location /news {
