fix(404): Send our 404 page, not the default nginx one

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -42,7 +42,7 @@ server {
   root /var/www/app;
 
   location / {
-    try_files $uri $uri/ $uri.html =404;
+    try_files $uri $uri/ /404/index.html;
   }
 
   location /news {
