fix: Disable server tokens

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,7 @@ http {
   tcp_nodelay     on;
   #tcp_nopush     on;
   keepalive_timeout  65;
+  server_tokens off;
 
   ##
   # SSL
@@ -55,8 +56,7 @@ http {
   gzip_types
     text/plain text/css application/json application/x-javascript text/xml
     application/xml application/xml+rss application/javascript text/javascript;
-  gzip_disable "msie6";
-
+  gzip_disable “MSIE [1-6]\.(?!.*SV1)”;
   ##
   # Virtual Host Configs
   ##
