fix: Declare /internal route in nginx

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -45,6 +45,11 @@ server {
     try_files $uri $uri/ /404/index.html;
   }
 
+  location /internal {
+    proxy_pass http://loopback;
+    include snippets/proxy-params.nginx;
+  }
+
   location /news {
 
 #  Use the below to take down news
