fix: Send disallow robots.txt for .rocks

--- a/nginx/sites-enabled/rocks.conf
+++ b/nginx/sites-enabled/rocks.conf
@@ -11,7 +11,7 @@ upstream loopback {
 }
 
 server {
-  listen 443;
+  listen 443 ssl;
   server_name api.freecodecamp.rocks;
 
   include snippets/ssl-rocks.conf;
@@ -32,8 +32,8 @@ server {
 }
 
 server {
-  listen 443;
-  server_name freecodecamp.rocks www.freecodecamp.rocks;
+  listen 443 ssl;
+  server_name www.freecodecamp.rocks;
 
   include snippets/ssl-rocks.conf;
   include snippets/netlify-redirects.nginx;
@@ -79,6 +79,9 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
+  location /robots.txt {
+    return 200 "User-agent: *\nDisallow: /\n";
+  }
 }
 
 # redirect non http to https://www
@@ -95,7 +98,7 @@ server {
   server_name freecodecamp.rocks;
 
 
-  include snippets/ssl-org.conf;
+  include snippets/ssl-rocks.conf;
 
   return 301 https://www.freecodecamp.rocks$request_uri;
 }
